Revision history for Catalyst-Authentication-Credential-Twitter

{{$NEXT}}

0.03001   2011-11-22
  [BUG FIXES]
  - Add 'Catalyst::Plugin::Session::PerUser' to the list of dependencies.

0.03000   2011-11-14
  [ENHANCEMENTS]
    - change get_authorization_url() for get_authentication_url(), which
bypass the authorize page if the user has already authorized the app.
    (thanks to Francoise Dehinbo for the suggestion)

  [BUG FIXES]
    - Ensure that authenticate() doesn't explode if store is not DBIx::Class.

  [DOCUMENTATION]
    - Spell out limitation with the stores.

0.02002   2011-11-11
 [BUG FIXES]
    - Check if Catalyst::Plugin::Session::PerUser is active on
        first use, and die with a meaningful message if it's not. [RT66543]

0.02001 2011-04-17
    - Don't have the test fail if WWW::Test::Catalyst::Mechanized is not installed.

0.02000 2011-04-17
    - Break the authentication process in two
    - Cleaned up subversion files.
    - Add some tests.

0.01001 2009-12-06
	- Share access_tokens in session for registration

0.01000	2009-12-06
	- Initial release